--- a/site/src/scss/partials/_header.scss
+++ b/site/src/scss/partials/_header.scss
@@ -160,7 +160,7 @@ nav {
   #fade {
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     min-height: 700px;
     left: 0;
